; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ofed/libmlx4/extr_qp.c_mlx4_clear_qp.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ofed/libmlx4/extr_qp.c_mlx4_clear_qp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx4_context = type { i32, i32, i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32**, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mlx4_clear_qp(%struct.mlx4_context* %0, i32 %1) #0 {
  %3 = alloca %struct.mlx4_context*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.mlx4_context* %0, %struct.mlx4_context** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = load %struct.mlx4_context*, %struct.mlx4_context** %3, align 8
  %8 = getelementptr inbounds %struct.mlx4_context, %struct.mlx4_context* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  %10 = sub nsw i32 %9, 1
  %11 = and i32 %6, %10
  %12 = load %struct.mlx4_context*, %struct.mlx4_context** %3, align 8
  %13 = getelementptr inbounds %struct.mlx4_context, %struct.mlx4_context* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = ashr i32 %11, %14
  store i32 %15, i32* %5, align 4
  %16 = load %struct.mlx4_context*, %struct.mlx4_context** %3, align 8
  %17 = getelementptr inbounds %struct.mlx4_context, %struct.mlx4_context* %16, i32 0, i32 3
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %19 = load i32, i32* %5, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i64 %20
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 8
  %24 = add nsw i32 %23, -1
  store i32 %24, i32* %22, align 8
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %36, label %26

26:                                               ; preds = %2
  %27 = load %struct.mlx4_context*, %struct.mlx4_context** %3, align 8
  %28 = getelementptr inbounds %struct.mlx4_context, %struct.mlx4_context* %27, i32 0, i32 3
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** %28, align 8
  %30 = load i32, i32* %5, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i64 %31
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 0
  %34 = load i32**, i32*** %33, align 8
  %35 = call i32 @free(i32** %34)
  br label %52

36:                                               ; preds = %2
  %37 = load %struct.mlx4_context*, %struct.mlx4_context** %3, align 8
  %38 = getelementptr inbounds %struct.mlx4_context, %struct.mlx4_context* %37, i32 0, i32 3
  %39 = load %struct.TYPE_2__*, %struct.TYPE_2__** %38, align 8
  %40 = load i32, i32* %5, align 4
  %41 = sext i32 %40 to i64
  %42 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i64 %41
  %43 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %42, i32 0, i32 0
  %44 = load i32**, i32*** %43, align 8
  %45 = load i32, i32* %4, align 4
  %46 = load %struct.mlx4_context*, %struct.mlx4_context** %3, align 8
  %47 = getelementptr inbounds %struct.mlx4_context, %struct.mlx4_context* %46, i32 0, i32 2
  %48 = load i32, i32* %47, align 8
  %49 = and i32 %45, %48
  %50 = sext i32 %49 to i64
  %51 = getelementptr inbounds i32*, i32** %44, i64 %50
  store i32* null, i32** %51, align 8
  br label %52

52:                                               ; preds = %36, %26
  ret void
}

declare dso_local i32 @free(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
